changed file path of image

--- a/day2.html
+++ b/day2.html
@@ -1,3 +1,4 @@
+https://nruffatto.github.io/day2.html
 <html>
 	<head>
 		<title>NathanSite</title>
@@ -51,7 +52,7 @@
 		<li>cheese</li>
 		</ol>
 		
-		<img src = "C:\Users\Nathan\Documents\aaaSCHOOL\05_JR2\Web Design\wheelbarrow.jpg" width = "100%">
+		<img src = "wheelbarrow.jpg" width = "100%">
 		
 	</body>
 </html>
