--- a/web_host_comparison.html
+++ b/web_host_comparison.html
@@ -54,7 +54,7 @@
 		<h2>Other Things</h2>
 		
 		<a href = "https://www.hostinger.com/wordpress-hosting" target = "_new">		
-			<img src = "images/speed_comparison.png" width = "50%" >
+			<img src = "speed_comparison.png" width = "50%" >
 		</a>
 		
 		<p>Above is a plot found on Hostinger's WordPress page. Interestingly, Hostinger has compared itself to SiteGround in terms of page loading speed, 
