--- a/web_host_comparison.html
+++ b/web_host_comparison.html
@@ -1,5 +1,5 @@
 https://nruffatto.github.io/web_host_comparison.html
-
+<!---->
 <html>
 	<head>
 	
@@ -66,7 +66,7 @@ https://nruffatto.github.io/web_host_comparison.html
 		</p>
 	
 		<a href = "https://www.siteground.com/wordpress-hosting.htm" target = "_new">
-			<img src = "images/recommended.png" width = "50%">
+			<img src = "images/recommended.PNG" width = "50%">
 		</a>
 	
 	
@@ -162,13 +162,13 @@ https://nruffatto.github.io/web_host_comparison.html
 		<p>As I looked around the site, I noticed the "Best Value" ribbon in the top right corner of the "Basic" plan.</p>
 		
 		<a href = "https://www.hostwinds.com/" target = "_new">
-			<img src = "images/best_value_1.png" width = "50%">
+			<img src = "images/best_value_1.PNG" width = "50%">
 		</a>
 		
 		<p>Then I noticed that it had changed to the "Ultimate" plan when I switched pages.</p>
 		
 		<a href = "https://www.hostwinds.com/hosting/shared" target = "_new">
-			<img src = "images/best_value_2.png" width = "50%">
+			<img src = "images/best_value_2.PNG" width = "50%">
 		</a>
 		
 		<h1>My Recommendation</h1>
@@ -177,3 +177,4 @@ https://nruffatto.github.io/web_host_comparison.html
 		reliability than the others.</p>
 	</body>
 </html>
+The end.
