--- a/StatesAnalysis/StatesAnalysis.html
+++ b/StatesAnalysis/StatesAnalysis.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title></title>
-		<link href = "StateAnalysis.css" rel = "stylesheet" type = "text/css">
+		<link href = "nruffatto.github.io/StatesAnalysis/StatesAnalysis.css" rel = "stylesheet" type = "text/css">
 	</head>
 	<body>
 	
