--- a/ExploreProject2020/index.html
+++ b/ExploreProject2020/index.html
@@ -25,27 +25,27 @@
             <article>
 				<h1>Go Explore!</h1>
 				<h2>Choose a US National Park Below:</h2>                <figure>
-                    <img src="/ExploreProject2020/glacier.jpg" />
+                    <img src="/glacier.jpg" />
 					<figcaption>Glacier National Park</figcaption>
 				</figure>
                 <figure>
-                    <img src="/ExploreProject2020/yellowstone.jpg" />
+                    <img src="/yellowstone.jpg" />
 					<figcaption>Yellowstone National Park</figcaption>
 				</figure>
                 <figure>
-                    <img src="/ExploreProject2020/teton.jpg" />
+                    <img src="/teton.jpg" />
 					<figcaption>Teton National Park</figcaption>
 				</figure>
                 <figure>
-                    <img src="/ExploreProject2020/yosemite.jpg" />
+                    <img src="/yosemite.jpg" />
 					<figcaption>Yosemite National Park</figcaption>
 				</figure>
                 <figure>
-                    <img src="/ExploreProject2020/zion.jpg" />
+                    <img src="/zion.jpg" />
 					<figcaption>Zion National Park</figcaption>
 				</figure>
                 <figure>
-                    <img src="/ExploreProject2020/rches.jpg" />
+                    <img src="/arches.jpg" />
 					<figcaption>Arches National Park</figcaption>
 				</figure>
             </article>
