--- a/ExploreProject2020/index.html
+++ b/ExploreProject2020/index.html
@@ -24,8 +24,7 @@
         <section class="welcome">
             <article>
 				<h1>Go Explore!</h1>
-				<h2>Choose a US National Park Below:</h2>                
-				<figure>
+				<h2>Choose a US National Park Below:</h2>                <figure>
                     <img src="/glacier.jpg" />
 					<figcaption>Glacier National Park</figcaption>
 				</figure>
