--- a/logo.html
+++ b/logo.html
@@ -16,7 +16,7 @@
 	</nav>
 	
 	<section>
-		<img src = "images/ChiRho.gif" width = 60%%>
+		<img src = "images/ChiRho.gif" width = 60%>
 		<div class = "leftcol">
 			<p></p>
 		</div>
