--- a/seasons/index.html
+++ b/seasons/index.html
@@ -13,10 +13,10 @@
 	
 	<nav>
 		<ul>
-		<li><a href = "/spring.html">Spring</a></li>
-		<li><a href = "/summer.html">Summer</a></li>
-		<li><a href = "/autumn.html">Autumn</a></li>
-		<li><a href = "/winter.html">Winter</a></li>
+		<li><a href = "spring.html">Spring</a></li>
+		<li><a href = "summer.html">Summer</a></li>
+		<li><a href = "autumn.html">Autumn</a></li>
+		<li><a href = "winter.html">Winter</a></li>
 		</ul>
 	</nav>
 	
