--- a/seasons/index.html
+++ b/seasons/index.html
@@ -21,15 +21,9 @@
 	</nav>
 	
 	<section>
-		<!-- <img src = "/images/rat.jpg"> -->
-		<!-- <img src = "/images/snake.jpg"> -->
-		<!-- <img src = "/images/snaked_mole_rat.gif"> -->
-		<!-- <div class = "leftcol"> -->
-			<!-- <p></p> -->
-		<!-- </div> -->
-		<!-- <div class = "rightcol"> -->
-			<!-- <p></p> -->
-		<!-- </div> -->
+		<img src = "">
+		<img src = "">
+		<img src = "">
 	</section>
 	
 	<footer>
