--- a/seasons/spring.html
+++ b/seasons/spring.html
@@ -4,7 +4,7 @@
 		<title>Spring</title>
 		<link href = "seasons.css" rel = "stylesheet" type = "text/css">
 	</head>
-	<body>
+	<body id = "spring">
 	
 	<div id = "wrap">
 	<header>
@@ -13,23 +13,15 @@
 	
 	<nav>
 		<ul>
-		<li><a href = "/spring.html">Spring</a></li>
-		<li><a href = "/summer.html">Summer</a></li>
-		<li><a href = "/autumn.html">Autumn</a></li>
-		<li><a href = "/winter.html">Winter</a></li>
+		<li><a href = "spring.html">Spring</a></li>
+		<li><a href = "summer.html">Summer</a></li>
+		<li><a href = "autumn.html">Autumn</a></li>
+		<li><a href = "winter.html">Winter</a></li>
 		</ul>
 	</nav>
 	
 	<section>
-		<img src = "/images/rat.jpg">
-		<img src = "/images/snake.jpg">
-		<img src = "/images/snaked_mole_rat.gif">
-		<div class = "leftcol">
-			<p></p>
-		</div>
-		<div class = "rightcol">
-			<p></p>
-		</div>
+	
 	</section>
 	
 	<footer>
