changed name of home to index

--- a/seasons/index.html
+++ b/seasons/index.html
@@ -13,6 +13,7 @@
 	
 	<nav>
 		<ul>
+		<li><a href = "index.html">Home</a></li>
 		<li><a href = "spring.html">Spring</a></li>
 		<li><a href = "summer.html">Summer</a></li>
 		<li><a href = "autumn.html">Autumn</a></li>
