final seasons site upload

--- a/seasons/autumn.html
+++ b/seasons/autumn.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id = "autumn">
 	<head>
 		<title>Spring</title>
 		<link href = "seasons.css" rel = "stylesheet" type = "text/css">
@@ -8,24 +8,33 @@
 	
 	<div id = "wrap">
 	<header>
-		<p></p>
+		The Seasons
 	</header>
 	
 	<nav>
 		<ul>
 		<li><a href = "spring.html">Spring</a></li>
 		<li><a href = "summer.html">Summer</a></li>
-		<li><a href = "autumn.html">Autumn</a></li>
+		<li><a href = "index.html">Home</a></li>
 		<li><a href = "winter.html">Winter</a></li>
 		</ul>
 	</nav>
 	
 	<section>
-	
+		<h1>Psalm 15: 1-5</h1>
+		<p>Preserve me, O Lord, for I have put my trust in thee. 
+		I have said to the Lord, thou art my God, for thou hast no need of my goods. 
+		To the saints, who are in his land, he hath made wonderful all my desires in 
+		them. Their infirmities were multiplied: afterwards they made haste. 
+		I will not gather together their meetings for blood offerings: 
+		nor will I be mindful of their names by my lips. 
+		The Lord is the portion of my inheritance and of my cup: it is thou that 
+		wilt restore my inheritance to me.
+		</p>
 	</section>
 	
 	<footer>
-		<p></p>
+		<p>Excerpts from the Douay Rheims Version</p>
 	</footer>
 	
 	
