--- a/seasons/index.html
+++ b/seasons/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id = "home">
 	<head>
 		<title>Home</title>
 		<link href = "seasons.css" rel = "stylesheet" type = "text/css">
@@ -8,12 +8,11 @@
 	
 	<div id = "wrap">
 	<header>
-		<p></p>
+		The Seasons
 	</header>
 	
 	<nav>
 		<ul>
-		<li><a href = "index.html">Home</a></li>
 		<li><a href = "spring.html">Spring</a></li>
 		<li><a href = "summer.html">Summer</a></li>
 		<li><a href = "autumn.html">Autumn</a></li>
@@ -22,13 +21,40 @@
 	</nav>
 	
 	<section>
-		<img src = "">
-		<img src = "">
-		<img src = "">
+		<h1>Spring</h1>
+		<p>Spring is a season of new life. Plants sprout from the earth, flowers
+		bloom, and animals are born. But even more fully, new life is found in
+		the resurrected Christ. It is a time to realize the saving power of God
+		in our own lives, and to receive His redemptive gift ever more keenly.</p>
+		<h1>Summer</h1>
+		<p>Summer is a time for the continued flourishing of life. It is also
+		the hottest season, which allows people to go outdoors and travel more
+		easily. On a spiritual level, after we have received the joyful redemption
+		of Easter, the Holy Spirit descends on us, as in the summer holiday of
+		Pentacost, allowing us to carry the Gospel outward.</p>
+		<h1>Autumn</h1>
+		<p>Autumn is a time of preparation. The squirrels store up there nuts for the
+		winter, and the bears take to their dens. They anticipate not only the trial
+		of the winter, but also the renewal of the spring. So should we prepare for a
+		spiritual winter, storing up treasure in heaven, and gathering up God's grace
+		so as to prepare for the times when we have only faith to cling to. This
+		preparation is especially reflected in the liturgical season of Advent, which
+		occures at the end of Autumn and points toward Christ's coming.
+		</p>
+		<h1>Winter</h1>
+		<p> Winter is marked by desolation and perseverence. Many plants recede into
+		the ground, along with some animals, and migratory animals have to leave
+		their summer home. They do these things so that they can partake more fully
+		in the fruit of Spring when it comes. All of us will enter into spiritual 
+		winters whether prepared or not. Lent, which begins during the winter, 
+		upholds the spiritual disciplines proper to winter time so that we can more
+		readily absorb the grace of Easter.
+		</p>
+		
 	</section>
 	
 	<footer>
-		<p></p>
+		<p>Excerpts from the Douay Rheims Version</p>
 	</footer>
 	
 	
