--- a/seasons/spring.html
+++ b/seasons/spring.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id = "spring">
 	<head>
 		<title>Spring</title>
 		<link href = "seasons.css" rel = "stylesheet" type = "text/css">
@@ -8,12 +8,12 @@
 	
 	<div id = "wrap">
 	<header>
-		<p></p>
+		The Seasons
 	</header>
 	
 	<nav>
 		<ul>
-		<li><a href = "spring.html">Spring</a></li>
+		<li><a href = "index.html">Home</a></li>
 		<li><a href = "summer.html">Summer</a></li>
 		<li><a href = "autumn.html">Autumn</a></li>
 		<li><a href = "winter.html">Winter</a></li>
@@ -21,11 +21,21 @@
 	</nav>
 	
 	<section>
-	
+		<h1>Psalm 113</h1>
+		<p>Praise the Lord, ye children: praise ye the name of the Lord.
+		Blessed be the name of the Lord, from henceforth now and for ever.
+		From the rising of the sun unto the going down of the same, the name 
+		of the Lord is worthy of praise. The Lord is high above all nations; 
+		and his glory above the heavens. Who is as the Lord our God, who dwelleth 
+		on high: And looketh down on the low things in heaven and in earth? 
+		Raising up the needy from the earth, and lifting up the poor out of the 
+		dunghill: That he may place him with princes, with the princes of his people.
+		Who maketh a barren woman to dwell in a house, the joyful mother of children.
+		</p>
 	</section>
 	
 	<footer>
-		<p></p>
+		<p>Excerpts from the Douay Rheims Version</p>
 	</footer>
 	
 	
