--- a/seasons/winter.html
+++ b/seasons/winter.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id = "winter">
 	<head>
 		<title>Spring</title>
 		<link href = "seasons.css" rel = "stylesheet" type = "text/css">
@@ -8,7 +8,7 @@
 	
 	<div id = "wrap">
 	<header>
-		<p></p>
+		The Seasons
 	</header>
 	
 	<nav>
@@ -16,16 +16,25 @@
 		<li><a href = "spring.html">Spring</a></li>
 		<li><a href = "summer.html">Summer</a></li>
 		<li><a href = "autumn.html">Autumn</a></li>
-		<li><a href = "winter.html">Winter</a></li>
+		<li><a href = "index.html">Home</a></li>
 		</ul>
 	</nav>
 	
 	<section>
-	
+		<h1>Psalm 129</h1>
+		<p>Out of the depths I have cried to thee, O Lord: 
+		Lord, hear my voice. Let thy ears be attentive to the voice of my 
+		supplication. If thou, O Lord, wilt mark iniquities: 
+		Lord, who shall stand it. For with thee there is merciful forgiveness: 
+		and by reason of thy law, I have waited for thee, O Lord. 
+		My soul hath relied on his word: My soul hath hoped in the Lord.
+		From the morning watch even until night, let Israel hope in the Lord. 
+		Because with the Lord there is mercy: and with him plentiful redemption. 
+		And he shall redeem Israel from all his iniquities.</p>
 	</section>
 	
 	<footer>
-		<p></p>
+		<p>Excerpts from the Douay Rheims Version</p>
 	</footer>
 	
 	
