--- a/FinalProject/likes.html
+++ b/FinalProject/likes.html
@@ -71,7 +71,7 @@
 		<ul>
 			<li><a id = "nav_01" href = "index.html" onmouseover = "playNoise(id)">TRACKS</a></li>
 			<li><a id = "nav_01" href = "remixes.html" onmouseover = "playNoise(id)">REMIXES</a></li>
-			<li><a id = "nav_01" href = "melodies.html" onmouseover = "playNoise(id)">MELODIES</a></li>
+			<li><a id = "nav_01" href = "instrumentals.html" onmouseover = "playNoise(id)">INSTRUMENTALS</a></li>
 			<li><a id = "nav_01" href = "sounds.html" onmouseover = "playNoise(id)">SOUNDS</a></li>
 			<li><a id = "nav_01" href = "likes.html" onmouseover = "playNoise(id)">LIKES</a></li>
 		</ul>
